--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html> 
     <head>
         <meta charset="utf-8" />
-    
         <title>Page souvenir...</title>
         <link rel="stylesheet" href="style.css" />
         <script src="script.js"></script>
@@ -25,13 +24,23 @@
             <section class="top-page">
                 <header>
                     <nav>
-                        <a href="#">Test 1 2</a>
-                        <a href="#">Test 1 2</a>
-                        <a href="#">Test 1 2</a>
+                        <a href="#">Lien vers une page</a>
+                        <a href="#">Lien vers une page</a>
+                        <a href="#">Lien vers une page</a>
                     </nav>
                 </header>
                 <div class="top-phrase">
-                    <h1>Les souvenirs d'une semaine d'amitié</h1>
+                    <h1>Voici les souvenirs d'une semaine, qui à mon goût, est passée trop vite.</h1>
+                </div>
+                <div class="avion"><img src="img/coeur.png" alt="avion"></div>
+            </section>
+            <section class="photo-card">
+                <div class="jeune">
+                    <h1>Quand on était jeunes (cette partie n'est pas encore finie)</h1>
+                    <div class="photo-group">
+                        <div class="photo1 c"><img src="img/sara-jeune.jpg" alt="Sara jeune"></div>
+                        <div class="photo2 c"><img src="img/maxime-jeune.jpg" alt="Maxime jeune"></div>
+                    </div>
                 </div>
             </section>
         </div>
