--- a/index.html
+++ b/index.html
@@ -32,13 +32,21 @@
                 <div class="top-phrase">
                     <h1>Voici les souvenirs d'une semaine, qui à mon goût, est passée trop vite.</h1>
                 </div>
-                <div class="avion"><img src="img/coeur.png" alt="avion"></div>
+                <div class="avion"><img src="img/avion.jpg" alt="avion"></div> 
             </section>
             <section class="photo-card">
-                <div class="jeune">
-                    <h1>Quand on était jeunes (cette partie n'est pas encore finie)</h1>
+                <div class="jeune ph">
+                    <div class="anim-text"><h1 data-text="Jeunesse...">Jeunesse...</h1></div>
                     <div class="photo-group">
                         <div class="photo1 c"><img src="img/sara-jeune.jpg" alt="Sara jeune"></div>
+                        <div class="photo2 c"><img src="img/maxime-jeune.jpg" alt="Maxime jeune"></div>
+                    </div>
+                </div>
+                <div class="separateur"><div class="separateur-coeur"><img src="img/avion.jpg" alt="Coeur séparateur"></div></div>
+                <div class="vieux ph">
+                    <div class="anim-text"><h1 data-text="Maintenant...">Maintenant...</h1></div>
+                    <div class="photo-group">
+                        <div class="photo1 c"><img src="img/sara-actuelle.jpg" alt="Sara jeune"></div>
                         <div class="photo2 c"><img src="img/maxime-jeune.jpg" alt="Maxime jeune"></div>
                     </div>
                 </div>
@@ -46,3 +54,4 @@
         </div>
     </body>
 </html>
+
