--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="top-phrase">
                     <h1>Voici les souvenirs d'une semaine, qui à mon goût, est passée trop vite.</h1>
                 </div>
-                <div class="avion"><img src="img/avion.jpg" alt="avion"></div> 
+                <div class="avion"><img src="img/coeur.png" alt="avion"></div> 
             </section>
             <section class="photo-card">
                 <div class="jeune ph">
@@ -42,7 +42,7 @@
                         <div class="photo2 c"><img src="img/maxime-jeune.jpg" alt="Maxime jeune"></div>
                     </div>
                 </div>
-                <div class="separateur"><div class="separateur-coeur"><img src="img/avion.jpg" alt="Coeur séparateur"></div></div>
+                <div class="separateur"><div class="separateur-coeur"><img src="img/coeur.png" alt="Coeur séparateur"></div></div>
                 <div class="vieux ph">
                     <div class="anim-text"><h1 data-text="Maintenant...">Maintenant...</h1></div>
                     <div class="photo-group">
