--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <div class="vieux ph">
                     <div class="anim-text"><h1 data-text="Maintenant...">Maintenant...</h1></div>
                     <div class="photo-group">
-                        <div class="photo1 c"><img src="img/sara-actuelle.jpg" alt="Sara jeune"></div>
-                        <div class="photo2 c"><img src="img/maxime-jeune.jpg" alt="Maxime jeune"></div>
+                        <div class="photo1 c"><img src="img/sara-actuelle.jpg" alt="Sara actuelle"></div>
+                        <div class="photo2 c"><img src="img/maxime-actuel.jpg" alt="Maxime actuel"></div>
                     </div>
                 </div>
             </section>
